# Survidle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Enemy.h  Game.h  InputHandler.h  MathUtils.h  Player.h  main.h  test.h
src/: CMakeLists.txt  Enemy.cpp  Game.cpp  MathUtils.cpp  Player.cpp  main.cpp
src/core/: Game.cpp  InputHandler.cpp  main.cpp
src/entities/: Player.cpp
